UI Fixes: - Nav on tablet+ has the correct max height now (was overflowing before) - Additional padding to post-main to give the FAB some room on mobile

--- a/_sass/post.sass
+++ b/_sass/post.sass
@@ -1,5 +1,7 @@
 .post-main
   position: relative
+  // Prevent the content from clashing with the FAB on mobile
+  padding-bottom: 5rem 
 
 .post-duo
   display: flex
@@ -19,7 +21,7 @@
     border-right: $white-ter .1rem solid
     width: (14rem + 1.5rem)
     padding-right: 1.5rem
-    max-height: calc(100vh - 1.5rem)
+    max-height: calc(100vh - 3rem)
     overflow: auto
 
 .post-nav-divider
@@ -151,7 +153,6 @@
     margin-left: 1.5rem
 
 .post-content
-  @extend .content
   p, ul, li
     font-size: $size-5
 
@@ -171,9 +172,6 @@
     width: 100%
     height: 100%
 
-.post-share-footer
-  padding-bottom: 5rem
-
 .post-cta
   margin-left: -1.5rem
   margin-right: -1.5rem
@@ -186,9 +184,6 @@
     margin-left: 0
     margin-right: 0
     border-radius: .25rem
-
-#share-button
-  opacity: 0
 
 .post-mobile-nav-backdrop
   z-index: 31
